[gd_scene load_steps=46 format=3 uid="uid://cyysnvxa46gtr"]

[ext_resource type="Script" path="res://scripts/space/Galaxy.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://clerfry15us8s" path="res://textures/enviroment/deep-space.png" id="2"]
[ext_resource type="Script" path="res://scripts/space/GalaxyView.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://ydk6bq7rtxys" path="res://textures/GUI/space/blue_selector.png" id="4"]
[ext_resource type="Texture2D" uid="uid://bsnfc55tfi6d" path="res://textures/GUI/space/green_selector.png" id="5"]
[ext_resource type="Texture2D" uid="uid://dyhrwrlkvk0y7" path="res://textures/GUI/space/green_line/green_line10.png" id="6"]
[ext_resource type="Texture2D" uid="uid://cb6c78e1qwegy" path="res://textures/GUI/space/green_line/green_line6.png" id="7"]
[ext_resource type="Texture2D" uid="uid://8cafem7hqtxo" path="res://textures/GUI/space/green_line/green_line1.png" id="8"]
[ext_resource type="Texture2D" uid="uid://bo4mfqmib3w3s" path="res://textures/GUI/space/green_line/green_line9.png" id="9"]
[ext_resource type="Texture2D" uid="uid://q2vikd3kxe54" path="res://textures/GUI/space/green_line/green_line3.png" id="10"]
[ext_resource type="Texture2D" uid="uid://2jmsvhgmgsfi" path="res://textures/GUI/space/green_line/green_line5.png" id="11"]
[ext_resource type="Texture2D" uid="uid://k1hhl1rxvv4v" path="res://textures/GUI/space/green_line/green_line2.png" id="12"]
[ext_resource type="Texture2D" uid="uid://dafaqt6l51u4u" path="res://textures/GUI/space/green_line/green_line4.png" id="13"]
[ext_resource type="Texture2D" uid="uid://dt1mnhofqj1sj" path="res://textures/GUI/space/green_line/green_line7.png" id="14"]
[ext_resource type="Texture2D" uid="uid://ds8u4crxtkfyp" path="res://textures/GUI/space/green_line/green_line8.png" id="15"]
[ext_resource type="Texture2D" uid="uid://docmqdn1y13fp" path="res://textures/GUI/Blank.png" id="16"]
[ext_resource type="Texture2D" uid="uid://xxd04udw1udt" path="res://textures/GUI/space/Bookmarks.png" id="17"]
[ext_resource type="PackedScene" uid="uid://dn6ilfeqopl5j" path="res://assets/GUI/Pause.tscn" id="19"]
[ext_resource type="Theme" uid="uid://0o5m0f0xtqt2" path="res://themes/space.tres" id="19_wopsm"]
[ext_resource type="Texture2D" uid="uid://bu4jjvitxquwi" path="res://textures/enviroment/space-3.png" id="21_72ufk"]
[ext_resource type="Texture2D" uid="uid://dmchg1tjse3cg" path="res://textures/ships/blue_ship1.png" id="22_uxhuq"]
[ext_resource type="PackedScene" uid="uid://bppw6n7p1ltej" path="res://assets/space/PlanetType.tscn" id="23"]
[ext_resource type="Texture2D" uid="uid://c7aub6ibigrbs" path="res://textures/GUI/loading/warp/big_ship1.png" id="23_pytsx"]
[ext_resource type="Texture2D" uid="uid://bk6b8gyr77wm1" path="res://textures/GUI/loading/warp/big_ship3.png" id="24_to3uo"]
[ext_resource type="Texture2D" uid="uid://xrk5rdxlubj0" path="res://textures/GUI/loading/warp/big_ship2.png" id="25_gqkws"]
[ext_resource type="Script" path="res://scripts/space/SystemInfo.gd" id="26"]
[ext_resource type="Texture2D" uid="uid://4f6addl3h82r" path="res://textures/GUI/loading/warp/big_ship4.png" id="26_5s7k1"]
[ext_resource type="Texture2D" uid="uid://cwkpoqtya0vtw" path="res://textures/GUI/loading/warp/warp_line1.png" id="27_vc1bf"]
[ext_resource type="Texture2D" uid="uid://cs5hgp3rrvmac" path="res://textures/GUI/loading/warp/warp_line2.png" id="28_qdm5h"]
[ext_resource type="Texture2D" uid="uid://bfjn5h3g0psps" path="res://textures/GUI/loading/warp/warp_line3.png" id="29_gmt0k"]
[ext_resource type="Texture2D" uid="uid://c5ucvvmvfboj3" path="res://textures/GUI/loading/warp/warp_line4.png" id="30_76s6n"]
[ext_resource type="Script" path="res://scripts/space/Bookmarks.gd" id="31"]
[ext_resource type="Texture2D" uid="uid://bshyluxbvfb60" path="res://textures/GUI/loading/warp/bar.png" id="31_dgrvv"]

[sub_resource type="AnimatedTexture" id="1"]
frames = 10
speed_scale = 5.0
frame_0/texture = ExtResource("8")
frame_1/texture = ExtResource("12")
frame_1/duration = 1.0
frame_2/texture = ExtResource("10")
frame_2/duration = 1.0
frame_3/texture = ExtResource("13")
frame_3/duration = 1.0
frame_4/texture = ExtResource("11")
frame_4/duration = 1.0
frame_5/texture = ExtResource("7")
frame_5/duration = 1.0
frame_6/texture = ExtResource("14")
frame_6/duration = 1.0
frame_7/texture = ExtResource("15")
frame_7/duration = 1.0
frame_8/texture = ExtResource("9")
frame_8/duration = 1.0
frame_9/texture = ExtResource("6")
frame_9/duration = 1.0

[sub_resource type="SpriteFrames" id="SpriteFrames_wv1wa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("23_pytsx")
}, {
"duration": 1.0,
"texture": ExtResource("24_to3uo")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("23_pytsx")
}, {
"duration": 1.0,
"texture": ExtResource("25_gqkws")
}, {
"duration": 1.0,
"texture": ExtResource("24_to3uo")
}, {
"duration": 1.0,
"texture": ExtResource("26_5s7k1")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_pjxie"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("27_vc1bf")
}, {
"duration": 1.0,
"texture": ExtResource("28_qdm5h")
}, {
"duration": 1.0,
"texture": ExtResource("29_gmt0k")
}, {
"duration": 1.0,
"texture": ExtResource("30_76s6n")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_ojamg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TopBlackBar:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2.08165e-12, -80)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BottomBlackBar:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2.08165e-12, 160)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Background:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BigShip:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Ship:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(134, 156)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Ship:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("SpaceTime:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Background:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2.08165e-12, -774)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("SpaceTime:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath(".:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_f6oee"]
resource_name = "move"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TopBlackBar:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2.08165e-12, -48)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BottomBlackBar:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2.08165e-12, 128)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Background:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BigShip:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BigShip")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"move", 1.0, false],
"method": &"play"
}]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("SpaceTime:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("SpaceTime")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"move", 1.0, false],
"method": &"play"
}]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Background:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2.08165e-12, -744), Vector2(-1364, -744)]
}

[sub_resource type="Animation" id="Animation_xwbfa"]
resource_name = "open_system"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TopBlackBar:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2.08165e-12, -80), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BottomBlackBar:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2.08165e-12, 160), Vector2(2.08165e-12, 80)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_2x7ix"]
resource_name = "start_loading"
length = 10.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TopBlackBar:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.8, 1.3, 9.7, 10.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(2.08165e-12, -80), Vector2(0, 0), Vector2(0, 0), Vector2(2.08165e-12, -48), Vector2(2.08165e-12, -48), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BottomBlackBar:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 0.8, 1.3, 9.7, 10.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(2.08165e-12, 160), Vector2(2.08165e-12, 80), Vector2(2.08165e-12, 80), Vector2(2.08165e-12, 128), Vector2(2.08165e-12, 128), Vector2(2.08165e-12, 80)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Background:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BigShip:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BigShip")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.5, 3, 8),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [&"idle", 1.0, false],
"method": &"play"
}, {
"args": [&"move", 1.0, false],
"method": &"play"
}, {
"args": [&"idle", 1.0, false],
"method": &"play"
}]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Ship:position")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(1.3, 3, 8, 9.7),
"transitions": PackedFloat32Array(0.574349, 1.51572, 1.51572, 0.574349),
"update": 0,
"values": [Vector2(120, 135), Vector2(142, 85), Vector2(142, 85), Vector2(160, 135)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Ship:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 1.3, 3, 8, 9.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("SpaceTime:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("SpaceTime:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(3, 3.5, 7.5, 8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Background:position")
tracks/9/interp = 2
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(3, 8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -744), Vector2(-1364, -744)]
}
tracks/10/type = "method"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("SpaceTime")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"default", 1.0, false],
"method": &"play"
}]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath(".:visible")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h0plg"]
_data = {
"RESET": SubResource("Animation_ojamg"),
"move": SubResource("Animation_f6oee"),
"open_system": SubResource("Animation_xwbfa"),
"start_loading": SubResource("Animation_2x7ix")
}

[sub_resource type="Animation" id="2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Black:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Black:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GalaxyView:zoom")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="4"]
resource_name = "selected"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GalaxyView:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.1, 0.1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Black:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/Black:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="3"]
resource_name = "start"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Black:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.1, 1.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Black:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.1, 1.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_87ki8"]
_data = {
"RESET": SubResource("2"),
"selected": SubResource("4"),
"start": SubResource("3")
}

[node name="Galaxy" type="Node2D"]
script = ExtResource("1")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="space" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.25, 0.25)
motion_mirroring = Vector2(568, 320)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/space"]
texture = ExtResource("2")

[node name="Line" type="TextureRect" parent="."]
visible = false
offset_top = -28.0
offset_right = 2.0
offset_bottom = 10.0
pivot_offset = Vector2(1, 0)
mouse_filter = 2
texture = SubResource("1")
expand_mode = 1
stretch_mode = 1

[node name="Sectors" type="Node2D" parent="."]

[node name="GalaxyView" type="Camera2D" parent="."]
position_smoothing_enabled = true
script = ExtResource("3")

[node name="Selected" type="TextureRect" parent="."]
visible = false
anchors_preset = -1
anchor_right = 0.25
offset_right = 21.0
offset_bottom = 21.0
mouse_filter = 2
texture = ExtResource("5")
expand_mode = 1
stretch_mode = 4

[node name="CurrentSelector" type="TextureRect" parent="."]
anchors_preset = -1
anchor_right = 0.25
offset_right = 21.0
offset_bottom = 21.0
mouse_filter = 2
texture = ExtResource("4")
expand_mode = 1
stretch_mode = 4

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Sidebar" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = 28.0
mouse_filter = 2

[node name="BookmarkBtn" type="TextureButton" parent="CanvasLayer/Sidebar"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("17")

[node name="Black" type="TextureRect" parent="CanvasLayer"]
modulate = Color(0, 0, 0, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("16")
expand_mode = 1

[node name="Pause" parent="CanvasLayer" instance=ExtResource("19")]
visible = false
type = "galaxy"

[node name="Bookmarks" type="Panel" parent="CanvasLayer"]
visible = false
offset_left = 29.0
offset_top = 2.0
offset_right = 145.0
offset_bottom = 97.0
theme = ExtResource("19_wopsm")
script = ExtResource("31")

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/Bookmarks"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -3.0
offset_bottom = -3.0

[node name="BookmarkContainer" type="VBoxContainer" parent="CanvasLayer/Bookmarks/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="Loading" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="TextureRect" parent="CanvasLayer/Loading"]
visible = false
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -774.0
offset_right = 1648.0
offset_bottom = 874.0
grow_vertical = 2
texture = ExtResource("21_72ufk")

[node name="Ship" type="Sprite2D" parent="CanvasLayer/Loading"]
visible = false
position = Vector2(134, 156)
scale = Vector2(2, 2)
texture = ExtResource("22_uxhuq")

[node name="BigShip" type="AnimatedSprite2D" parent="CanvasLayer/Loading"]
visible = false
position = Vector2(142, 80)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_wv1wa")
animation = &"idle"
frame = 1
frame_progress = 0.968947

[node name="SpaceTime" type="AnimatedSprite2D" parent="CanvasLayer/Loading"]
visible = false
modulate = Color(1, 1, 1, 0)
position = Vector2(142, 80)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_pjxie")
frame = 1
frame_progress = 0.194297

[node name="TopBlackBar" type="TextureRect" parent="CanvasLayer/Loading"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -80.0
offset_right = 1988.0
grow_horizontal = 2
texture = ExtResource("16")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Loading/TopBlackBar"]
custom_minimum_size = Vector2(2.08165e-12, 32)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -32.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("31_dgrvv")

[node name="BottomBlackBar" type="TextureRect" parent="CanvasLayer/Loading"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 160.0
offset_right = 1988.0
offset_bottom = 240.005
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("16")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/Loading/BottomBlackBar"]
custom_minimum_size = Vector2(2.08165e-12, 32)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 32.0
grow_horizontal = 2
texture = ExtResource("31_dgrvv")
flip_v = true

[node name="LoadingAnimation" type="AnimationPlayer" parent="CanvasLayer/Loading"]
libraries = {
"": SubResource("AnimationLibrary_h0plg")
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_87ki8")
}

[node name="SystemInfo" type="Panel" parent="."]
visible = false
offset_right = 80.0
offset_bottom = 84.0
theme = ExtResource("19_wopsm")
script = ExtResource("26")

[node name="ScrollContainer" type="ScrollContainer" parent="SystemInfo"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -3.0
offset_bottom = -3.0

[node name="VBoxContainer" type="VBoxContainer" parent="SystemInfo/ScrollContainer"]
layout_mode = 2

[node name="SystemName" type="Label" parent="SystemInfo/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
text = "Alpha Adromeda 2"

[node name="PlanetType" parent="SystemInfo/ScrollContainer/VBoxContainer" instance=ExtResource("23")]
layout_mode = 2

[node name="PlanetType2" parent="SystemInfo/ScrollContainer/VBoxContainer" instance=ExtResource("23")]
layout_mode = 2

[node name="PlanetType3" parent="SystemInfo/ScrollContainer/VBoxContainer" instance=ExtResource("23")]
layout_mode = 2

[node name="PlanetType4" parent="SystemInfo/ScrollContainer/VBoxContainer" instance=ExtResource("23")]
layout_mode = 2

[node name="PlanetType5" parent="SystemInfo/ScrollContainer/VBoxContainer" instance=ExtResource("23")]
layout_mode = 2

[connection signal="toggled" from="CanvasLayer/Sidebar/BookmarkBtn" to="." method="_on_BookmarkBtn_toggled"]
